# rust-vrsc-rpc

./: README.md
client/: Cargo.toml  README.md
client/src/: chain_config.rs  client.rs  coin_config.rs  error.rs  lib.rs
json/: Cargo.toml  README.md
json/src/: identity.rs  lib.rs
