[package]
authors = ["jorian"]
description = "A wrapper for Verus RPCs"
edition = "2021"
license = "MIT"
name = "vrsc-rpc"
version = "0.1.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrsc-rpc-json = "0.1.6"
dirs = "5.0"
jsonrpc = { git = "https://github.com/apoelstra/rust-jsonrpc", branch = "master", version = "0.14.0" }
os_info = "3.0"
serde = "1.0.115"
serde_json = "1.0.57"
serde_with = "2.1.0"
tracing = "0.1.26"
