[package]
authors = ["jorian"]
description = "A wrapper for Verus RPCs"
edition = "2021"
license = "MIT"
name = "vrsc-rpc"
version = "0.1.20"

[dependencies]
vrsc-rpc-json = { path = "../json" }
dirs = "5.0"
jsonrpc = { version = "0.17.0" }
os_info = "3.0"
serde = "1.0.115"
serde_json = "1.0.57"
serde_with = "3.7.0"
tracing = "0.1.26"
