[package]
name = "vrsc-rpc-json"
description = "a wrapper for RPC responses in JSON for Verus"
version = "0.0.2"
authors = ["jorian"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bitcoin = { version = "0.27", features = [ "use-serde" ] }
hex = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
vrsc = "0.0.1"