[package]
authors = ["jorian"]
description = "a wrapper for RPC responses in JSON for Verus"
edition = "2021"
license = "MIT"
name = "vrsc-rpc-json"
version = "0.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bitcoin = {version = "0.27", features = ["use-serde"]}
hex = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "1.14.0"
vrsc = "0.0.1"
